<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailed"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailedActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/tool_bar"
        android:background="@drawable/toolbar_background"
        app:title="Tugas6_ListView"
        app:titleTextColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/img_profile"
            android:src="@drawable/blank_pfp"
            app:shapeAppearanceOverlay="@style/circleImageView"
            android:contentDescription="@string/photo_preview"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:textSize="18sp"
            android:labelFor="@+id/detail_nama"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_nama"
            android:text="@string/nama"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nrp"
            android:textSize="18sp"
            android:labelFor="@+id/detail_nrp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_nrp"
            android:text="@string/nrp"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_hp"
            android:textSize="18sp"
            android:labelFor="@+id/detail_nohp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_nohp"
            android:text="@string/no_hp"
            android:textColor="@color/black"
            android:textSize="22sp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_edit"
            android:text="@string/edit"
            android:background="@drawable/rounded_button10_outline_purple"
            android:textColor="@color/purple"
            android:layout_marginEnd="20dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_delete"
            android:text="@string/delete"
            android:background="@drawable/rounded_button_10"
            android:backgroundTint="@color/red"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>